data/all_generated_tests/raw_wast_tests/br_table_UnreachableCodeExecution_2169.wast
;; 9. Incorporate a `try-catch` pattern with a `br_table` instruction, where an abort operation could lead to `unreachable`. Verify if exception handling implemented correctly prevents executing `unreachable` due to mishandling branch indices in any implementation.

(assert_invalid
  (module (func $try-catch-unreachable
    (try (result i32)
      (block
        (br_table 0 0 0 (i32.const 10))
        (unreachable)
      )
    (catch (block (i32.const 0))))
  ))
  "type mismatch"
)